--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "express-async-error": "^0.0.2",
     "express-async-errors": "^3.1.1",
+    "express-validator": "^7.0.1",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.2"
