--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,11 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
+    "axios": "^1.6.4",
     "react": "^18.2.0",
+    "react-cookie": "^7.0.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
